--- a/src/template/partial/header.hbs
+++ b/src/template/partial/header.hbs
@@ -1,5 +1,3 @@
 <header>
-    <h1 class="brand-title"
-        data-seed-example
-        data-example-message="ed">{{#if title}}{{title}}{{else}}{{app/name}}{{/if}}</h1>
+    <h1 class="brand-title" data-seed-example data-example-message="ed">{{#if title}}{{title}}{{else}}{{app/name}}{{/if}}</h1>
 </header>
